# product-api/handlers/put.go
@@ -2,18 +2,20 @@ package handlers
 
 import (
 	"net/http"
-	"Building-Microservices-With-go/product-api/data"
+	"Building-Microservices-With-Go/product-api/data"
 )
 
 // swagger:route PUT /products products updateProduct
 // Update a products details
 //
 // responses:
-//	201: noContentResponse
+//	  201: noContentResponse
 //  404: errorResponse
 //  422: errorValidation
 
 func (p *Products) UpdateProducts(rw http.ResponseWriter, r * http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
+	
 	prod := r.Context().Value(KeyProduct{}).(data.Product) // 型アサーション
 	p.l.Println("[DEBUG] updating record id", prod.ID)
 
