# product-api/swagger.yaml
@@ -34,7 +34,7 @@ definitions:
     required:
     - id
     type: object
-    x-go-package: Building-Microservices-With-Go/product-api/data
+    x-go-package: Building-Microservices-With-go/product-api/data
   ValidationError:
     description: ValidationError is a collection of validation error messages
     properties:
@@ -48,10 +48,11 @@ definitions:
 info:
   description: Documentation for Product API
   title: Petstore API.
+  version: 1.0.0
 paths:
   /products:
     get:
-      description: Returns a list of products
+      description: Return a list of products from the database
       operationId: listProducts
       responses:
         "200":
@@ -96,7 +97,25 @@ paths:
         x-go-name: ID
       responses:
         "201":
-          $ref: '#/responses/noContent'
+          $ref: '#/responses/noContentResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product to delete from the database
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
@@ -110,7 +129,6 @@ responses:
     description: Validation errors defined as an array of strings
     schema:
       $ref: '#/definitions/ValidationError'
-  noContent: {}
   noContentResponse:
     description: No content is returned by this API endpoint
   productResponse:
